Threads done, XAML finished without balls, Binding

--- a/Project/Presentation/View/MainWindow.xaml
+++ b/Project/Presentation/View/MainWindow.xaml
@@ -1,10 +1,15 @@
-﻿<Window x:Class="View.MainWindow"
+﻿<Window x:Class="PresentationView.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:viewmodel="clr-namespace:ViewModel;assembly=ViewModel"
         mc:Ignorable="d"
-        Title="Billard" Height="450" Width="800">
+        Title="MainWindow" Height="532" Width="823">
+
+    <Window.DataContext>
+        <viewmodel:ViewModel/>
+    </Window.DataContext>
     <Border Padding="35">
         <Grid>
             <Grid.RowDefinitions>
@@ -19,7 +24,7 @@
             <Ellipse Grid.Row="0" Width="10" Height="10" Fill="#FF0000" Margin="690, 290, 0, 0"/>
             <Ellipse Grid.Row="0" Width="10" Height="10" Fill="#FF0000" Margin="123, 145, 567, 145"/>-->
             <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button Content="start simulation" Height="20" VerticalAlignment="Center" Margin="230, 10, 50, 20" Click="{Binding startSimulation}" />
+                <Button Content="start simulation" Height="20" VerticalAlignment="Center" Margin="230, 10, 50, 20" Command="{Binding startSimulation}" />
                 <StackPanel Margin="0, 0, 0, 20">
                     <TextBlock Text="Ilość KUL" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                     <TextBox VerticalAlignment="Center" Width="100" Text="{Binding chooseBallAmount}"/>
