--- a/Project/Presentation/View/MainWindow.xaml
+++ b/Project/Presentation/View/MainWindow.xaml
@@ -1,9 +1,10 @@
-﻿<Window x:Class="PresentationView.MainWindow"
+﻿<Window x:Class="View.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:viewmodel="clr-namespace:ViewModel;assembly=ViewModel"
+        xmlns:model="clr-namespace:Model;assembly=Model"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="820">
     <Window.DataContext>
@@ -15,8 +16,8 @@
                 <RowDefinition Height="300"/>
                 <RowDefinition Height="60"/>
             </Grid.RowDefinitions>
-            <Rectangle Grid.Row="0" Width="700" Height="300" Fill="#155843">
-            </Rectangle>
+            <!--<Rectangle Grid.Row="0" Width="700" Height="300" Fill="#155843">
+            </Rectangle>-->
             <!--<Ellipse Grid.Row="0" Width="10" Height="10" Fill="#FF0000" Margin="0, 0, 690, 290"/>
             <Ellipse Grid.Row="0" Width="10" Height="10" Fill="#FF0000" Margin="690, 0, 0, 290"/>
             <Ellipse Grid.Row="0" Width="10" Height="10" Fill="#FF0000" Margin="0, 290, 690, 0"/>
@@ -30,6 +31,24 @@
                 </StackPanel>
                 <Button Content="stop simulation"  Height="20" VerticalAlignment="Center" Margin="50, 10, 230, 20" Command="{Binding stopSimulation}"/>
             </StackPanel>
+            <ItemsControl Height="300" Margin="0,0,120,0" ItemsSource="{Binding ballsToDraw}">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <Canvas Name="Canvas" Width="700" Height="300" Background="#155843"></Canvas>
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+                <ItemsControl.ItemContainerStyle>
+                    <Style TargetType="ContentPresenter">
+                        <Setter Property="Canvas.Left" Value="{Binding x}"></Setter>
+                        <Setter Property="Canvas.Top" Value="{Binding y}"></Setter>
+                    </Style>
+                </ItemsControl.ItemContainerStyle>
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate DataType="{x:Type model:BallToDraw}">
+                        <Ellipse Height="5" Width="5" Stroke="#FF0000" Fill="#FF0000"></Ellipse>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
         </Grid>
     </Border>
 </Window>
