Balls are moving!

--- a/Project/Presentation/View/MainWindow.xaml
+++ b/Project/Presentation/View/MainWindow.xaml
@@ -17,11 +17,11 @@
             </Grid.RowDefinitions>
             <!--<Rectangle Grid.Row="0" Width="700" Height="300" Fill="#155843">
             </Rectangle>-->
-            <!--<Ellipse Grid.Row="0" Width="10" Height="10" Fill="#FF0000" Margin="0, 0, 690, 290"/>
+            <Ellipse Grid.Row="0" Width="10" Height="10" Fill="#FF0000" Margin="0, 0, 690, 290"/>
             <Ellipse Grid.Row="0" Width="10" Height="10" Fill="#FF0000" Margin="690, 0, 0, 290"/>
             <Ellipse Grid.Row="0" Width="10" Height="10" Fill="#FF0000" Margin="0, 290, 690, 0"/>
             <Ellipse Grid.Row="0" Width="10" Height="10" Fill="#FF0000" Margin="690, 290, 0, 0"/>
-            <Ellipse Grid.Row="0" Width="10" Height="10" Fill="#FF0000" Margin="123, 145, 567, 145"/>-->
+            <Ellipse Grid.Row="0" Width="10" Height="10" Fill="#FF0000" Margin="123, 145, 567, 145"/>
             <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center">
                 <Button Content="start simulation" Height="20" VerticalAlignment="Center" Margin="230, 10, 50, 20" Command="{Binding startSimulation}" />
                 <StackPanel Margin="0, 0, 0, 20">
@@ -30,7 +30,7 @@
                 </StackPanel>
                 <Button Content="stop simulation"  Height="20" VerticalAlignment="Center" Margin="50, 10, 230, 20" Command="{Binding stopSimulation}"/>
             </StackPanel>
-            <ItemsControl Height="300" Margin="0,0,120,0" ItemsSource="{Binding ballsToDraw}">
+            <ItemsControl Height="300" Margin="0,0,0,0" ItemsSource="{Binding ballsToDraw, UpdateSourceTrigger=PropertyChanged}">
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
                         <Canvas Name="Canvas" Width="700" Height="300" Background="#155843"></Canvas>
@@ -38,13 +38,13 @@
                 </ItemsControl.ItemsPanel>
                 <ItemsControl.ItemContainerStyle>
                     <Style TargetType="ContentPresenter">
-                        <Setter Property="Canvas.Left" Value="{Binding x}"></Setter>
-                        <Setter Property="Canvas.Top" Value="{Binding y}"></Setter>
+                        <Setter Property="Canvas.Left" Value="{Binding x}"/>
+                        <Setter Property="Canvas.Top" Value="{Binding y}"/>
                     </Style>
                 </ItemsControl.ItemContainerStyle>
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
-                        <Ellipse Height="5" Width="5" Stroke="#FF0000" Fill="#FF0000"></Ellipse>
+                        <Ellipse Height="10" Width="10" Fill="#FF0000"></Ellipse>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
